--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+/* 
+Author: Justin Mathais
+Theme: Restraunt Food Order
+Version: 1.0
+*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&family=Poppins:ital,wght@0,200;0,300;1,200&display=swap');
 
 *, *::before, *::after{
